--- a/index.html
+++ b/index.html
@@ -52,14 +52,17 @@
                 <div class="product">
                     <h3>Concrete Poles</h3>
                     <p>Our concrete poles are manufactured with precision and durability in mind, making them suitable for various construction needs.</p>
+                    <button class="view-button" onclick="showImage('product1')">View Images</button>
                 </div>
                 <div class="product">
                     <h3>Barbed Wire</h3>
                     <p>Secure your property with our high-quality barbed wire, designed to withstand harsh weather conditions and deter intruders effectively.</p>
+                    <button class="view-button" onclick="showImage('product1')">View Images</button>
                 </div>
                 <div class="product">
                     <h3>Additional Products</h3>
                     <p>Explore our range of additional products, including fencing accessories and landscaping materials, to complete your project with ease.</p>
+                    <button class="view-button" onclick="showImage('product1')">View Images</button>
                 </div>
             </div>
         </div>
@@ -70,16 +73,28 @@
             <h2>Customer Reviews</h2>
             <div class="reviews">
                 <div class="review">
-                    <h3><i class="fa-solid fa-user"></i> Bhomlaah</h3>
-                    <p>Shiv Traders exceeded my expectations with their top-notch products and excellent customer service. Highly recommended!</p>
+                    <div class="review-header">
+                        <h3><i class="fa-solid fa-user"></i> Bhomlaah</h3>
+                        <div class="review-rating">
+                            <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span>
+                        </div>
+                    </div>
+                    <p class="review-text">Shiv Traders exceeded my expectations with their top-notch products and excellent customer service. Highly recommended!</p>
                 </div>
                 <div class="review">
-                    <h3><i class="fa-solid fa-user"></i> Jogindar</h3>
-                    <p>I'm impressed by the professionalism of Shiv Traders. They provided me with expert guidance and delivered quality materials on time.</p>
+                    <div class="review-header">
+                        <h3><i class="fa-solid fa-user"></i> Jogindar</h3>
+                        <div class="review-rating">
+                            <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9734;</span>
+                        </div>
+                    </div>
+                    <p class="review-text">I'm impressed by the professionalism of Shiv Traders. They provided me with expert guidance and delivered quality materials on time.</p>
                 </div>
+                <!-- Additional reviews can be added here -->
             </div>
         </div>
     </section>
+    
 
     <section id="contact">
         <div class="container">
